@@ -1,6 +1,7 @@
 v5.9
 -----
 + Added a link on user profiles to their wishlist
++ Added back the achievement section to app pages that Valve mysteriously removed
 : Fixed a bug that caused hiding DLC for unowned games not to work under certain circumstances
 
 
